Fix contact details in privacy page

--- a/input/privacy.cshtml
+++ b/input/privacy.cshtml
@@ -144,10 +144,7 @@ Title: Privacy
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
 <li>
-<p>By email: ryan@silverturtle.nz</p>
-</li>
-<li>
-<p>By visiting this page on our website: <a href="htt" rel="external nofollow noopener" target="_blank">htt</a></p>
+<p>By email: privacy@silverturtle.nz</p>
 </li>
 </ul>
 </div>
